opam-version: "2.0"
maintainer: "mfp@acm.org"
authors: ["Mauricio Fernandez <mfp@acm.org>"]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "http://github.com/mfp/ocaml-sqlexpr"
dev-repo: "https://github.com/mfp/ocaml-sqlexpr.git"
bug-reports: "https://github.com/mfp/ocaml-sqlexpr/issues"
doc: "doc"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.1.1"}
  "ppx_tools_versioned"
  "ppx_core"
  "ocaml-migrate-parsetree"
  "base-unix"
  "re" {build & >= "1.7.2"}
  "ounit" {test}
  "lwt" {test}
]
