opam-version: "2.0"
maintainer: "mfp@acm.org"
authors: ["Mauricio Fernandez <mfp@acm.org>"]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "http://github.com/mfp/ocaml-sqlexpr"
dev-repo: "https://github.com/mfp/ocaml-sqlexpr.git"
bug-reports: "https://github.com/mfp/ocaml-sqlexpr/issues"

build: [
  [ "env" "ESTRING=%{estring:enable}%" "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {build & >= "1.1.1"}
  "csv"
  "lwt"
  "lwt_ppx" {build}
  "sqlite3"
  "base-unix"
  "ppx_sqlexpr"
]
depopts: [ "estring" ]

messages: [
  "For the PPX syntax extension, install package ppx_sqlexpr"
  {!ppx_sqlexpr:installed}
  "For the Camlp4 syntax extension, install package pa_sqlexpr"
  {!pa_sqlexpr:installed}
]
post-messages: [
  "The sqlexpr.ppx and sqlexpr.syntax package aliases have been dropped.
Switch to ppx_sqlexpr and pa_sqlexpr."
  ]
