opam-version: "1.2"
maintainer: "mfp@acm.org"
authors: ["Mauricio Fernandez <mfp@acm.org>"]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "http://github.com/mfp/ocaml-sqlexpr"
dev-repo: "https://github.com/mfp/ocaml-sqlexpr.git"
bug-reports: "https://github.com/mfp/ocaml-sqlexpr/issues"
build: [
  [ "env" "ESTRING=%{estring:enable}%" "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build & >= "1.1.1"}
  "csv"
  "lwt" {>= "2.2.0"}
  ("sqlite3" {>= "2.0.4"} | "sqlite3" {= "2.0.3"})
  "base-unix"
]

messages: [
  "For the PPX syntax extension, install package ppx_sqlexpr"
  {!ppx_sqlexpr:installed}
  "For the Camlp4 syntax extension, install package pa_sqlexpr"
  {!pa_sqlexpr:installed}
]
