(executable
 (name         example)
 (public_name  sqlexpr-example)
 (preprocess   (pps ppx_sqlexpr))
 (package      sqlexpr)
 (modules      example)
 (libraries    hex cstruct sqlexpr ppx_sqlexpr))

(test
 (name         t_parse)
 (modules      t_parse)
 (flags        (:standard -w -33))
 (libraries    sqlexpr oUnit)
 (preprocess   (pps ppx_sqlexpr)))

(test
 (name         t_sqlexpr)
 (modules      t_sqlexpr)
 (flags        (:standard -w -33))
 (libraries    sqlexpr oUnit lwt)
 (preprocess   (pps ppx_sqlexpr lwt_ppx)))

